--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # theme: cayman
-remote_theme: pages-themes/cayman@v0.2.0
+remote_theme: pages-themes/slate@v0.2.0
 title: Best of 2024
 author: Clint
 description: 2024's top albums and tracks
