--- a/_config.yml
+++ b/_config.yml
@@ -6,4 +6,4 @@ description: 2024's top albums and tracks
 plugins:
 - jekyll-remote-theme 
 github:
-  is_project_page: false
+  is_project_page: true
